changed how the nav works. can no longer post on mobile

--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -125,4 +125,34 @@
     .nav-container .buttons a{
         padding-right: 20px;
     }
+
+    .nav-container .buttons .mainNav{
+        grid-column: 1/5;
+    }
+
+    .nav-container .buttons .authContainer{
+        grid-column: 6/13;
+        padding-right: 5px;
+    }
+
+    .nav-container .buttons a.profile{
+        display: block;
+        padding-right: 0px;
+        text-align: right;
+    }
+
+    .signOut{
+        background-color: #fff;
+        border: none;
+        font-size: 0.8rem;
+        text-decoration: underline;
+        text-align: right;
+        padding-right: 0px;
+    }
+
+
+
+    .mobile-hide{
+        display: none;
+    }
 }
